--- a/src/shared/ui/calendar/calendar.css
+++ b/src/shared/ui/calendar/calendar.css
@@ -3,10 +3,6 @@
   font-size: 14px;
 }
 
-.react-datepicker__triangle {
-  display: none;
-}
-
 .react-datepicker__header {
   display: flex;
   flex-direction: column;
@@ -47,6 +43,8 @@
 
 .react-datepicker__day--selected,
 .react-datepicker__day--selected:not([aria-disabled='true']):hover,
+.react-datepicker__day--keyboard-selected,
+.react-datepicker__day--keyboard-selected:not([aria-disabled='true']):hover,
 .react-datepicker__day--in-selecting-range,
 .react-datepicker__day--in-selecting-range:not([aria-disabled='true']):hover,
 .react-datepicker__day--in-range,
