--- a/app/globals.css
+++ b/app/globals.css
@@ -66,22 +66,36 @@ button {
   }
 }
 
-.scrollbar {
-  overflow: auto;
+@layer components {
+  .scrollbar {
+    overflow: auto;
+  }
+
+  .scrollbar::-webkit-scrollbar {
+    @apply h-3 w-3 bg-white;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    @apply rounded-full border border-solid border-transparent bg-gray-700 bg-clip-content;
+  }
+
+  .scrollbar::-webkit-scrollbar:vertical {
+    @apply border-0 border-l border-solid border-l-gray-300;
+  }
+
+  .scrollbar::-webkit-scrollbar:horizontal {
+    @apply border-0 border-t border-solid border-t-gray-300;
+  }
 }
 
-.scrollbar::-webkit-scrollbar {
-  @apply h-3 w-3 bg-white;
-}
+@layer components {
+  .narrow-layout {
+    width: 360px;
+    margin: 0 auto;
+    padding: 50px 0;
+  }
 
-.scrollbar::-webkit-scrollbar-thumb {
-  @apply rounded-full border border-solid border-transparent bg-gray-700 bg-clip-content;
-}
-
-.scrollbar::-webkit-scrollbar:vertical {
-  @apply border-0 border-l border-solid border-l-gray-300;
-}
-
-.scrollbar::-webkit-scrollbar:horizontal {
-  @apply border-0 border-t border-solid border-t-gray-300;
+  .wide-layout {
+    width: 100%; /* 수정될 수 있음 */
+  }
 }
