--- a/app/globals.css
+++ b/app/globals.css
@@ -41,8 +41,7 @@ button {
   }
 
   .title-small {
-    /* 16px */
-    font-size: 1rem;
+    font-size: 1rem; /* 16px */
     font-weight: 500;
     line-height: 1.5rem; /* 24px */
   }
