--- a/app/globals.css
+++ b/app/globals.css
@@ -86,3 +86,30 @@ button {
     @apply border-0 border-t border-solid border-t-gray-300;
   }
 }
+
+@layer components {
+  .skeleton {
+    position: relative;
+    overflow: hidden;
+  }
+
+  .skeleton:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, #eeeeee, #e0e0e0, #eeeeee);
+    animation: 1s linear infinite skeleton-animation;
+  }
+
+  @keyframes skeleton-animation {
+    from {
+      transform: translateX(-100%);
+    }
+    to {
+      transform: translateX(100%);
+    }
+  }
+}
